--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,13 +4,14 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.0",
     "com.unity.ide.vscode": "1.1.4",
-    "com.unity.mobile.android-logcat": "1.0.0",
+    "com.unity.mobile.android-logcat": "1.1.1",
     "com.unity.subsystemregistration": "1.0.6",
-    "com.unity.test-framework": "1.1.9",
+    "com.unity.test-framework": "1.1.11",
     "com.unity.textmeshpro": "2.0.1",
-    "com.unity.xr.arcore": "2.1.2",
-    "com.unity.xr.arfoundation": "2.1.4",
-    "com.unity.xr.arkit": "2.1.2",
+    "com.unity.xr.arcore": "3.0.1",
+    "com.unity.xr.arfoundation": "3.0.1",
+    "com.unity.xr.arkit": "3.0.1",
+    "com.unity.xr.arsubsystems": "3.0.2",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
