--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
  filter=lfs diff=lfs merge=lfs -text
 AssetsAgoraEngine filter=lfs diff=lfs merge=lfs -text
+Assets filter=lfs diff=lfs merge=lfs -text
