--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Assets filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/Plugins/iOS/AgoraRtcEngineKit.framework/* filter=lfs diff=lfs merge=lfs -text
