--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@ Builds/
 Library/
 Temp/
 obj/
-Assembly-CSharp.csproj
-Assembly-CSharp-Editor.csproj
-Assembly-CSharp-firstpass.csproj
+*.csproj
+*.sln
 HoloMeV2.sln
 HoloMeV3.sln
 Packages/
 Assets/HoloMeApp/Textures/Examples
+ReleaseBuilds/
+
