--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 Assets filter=lfs diff=lfs merge=lfs -text
-Assets/AgoraEngine/Plugins/iOS/AgoraRtcEngineKit.framework/* filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/Plugins/iOS/AgoraRtcEngineKit.framework/**/* filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/Plugins/iOS/AgoraRtmKit.framework/**/* filter=lfs diff=lfs merge=lfs -text
 Assets/Resources/Textures/HomePageLoadingAnimation filter=lfs diff=lfs merge=lfs -text
 Assets/HoloMeApp/Textures filter=lfs diff=lfs merge=lfs -text
