--- a/Assets/AgoraEngine/Plugins/Android/AgoraRtcEngineKit.plugin/AndroidManifest.xml
+++ b/Assets/AgoraEngine/Plugins/Android/AgoraRtcEngineKit.plugin/AndroidManifest.xml
@@ -1,19 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="io.agora.gaming.unity.video"
-          android:versionCode="1"
-          android:versionName="1.0">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
-
-</manifest>
+version https://git-lfs.github.com/spec/v1
+oid sha256:7858957ebbd15a54fd9955e20bae39b8a057cf9a6e669dbcfb58269bd3eaff3f
+size 1039
