fix deep link manifest for android

--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -67,6 +67,8 @@
 				<category android:name="android.intent.category.BROWSABLE" />
 				<data android:scheme="beemholomedl" android:host="verification" />
 				<data android:scheme="beemholomedl" android:host="passwordresetconfirm" />
+                <data android:scheme="beemholomedl" android:host="room" />
+                <data android:scheme="beemholomedl" android:host="complete-login" />
 			</intent-filter>
 
             <meta-data
