base Dynamic Links

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.google.firebase.app": "7.1.0",
     "com.google.firebase.auth": "7.1.0",
     "com.google.firebase.crashlytics": "7.1.0",
+    "com.google.firebase.dynamic-links": "7.1.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.6",
