--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-.vs/
-Build/
-Builds/
-Library/
-Temp/
-obj/
-*.csproj
-*.sln
-HoloMeV2.sln
-HoloMeV3.sln
-Packages/
-Assets/HoloMeApp/Textures/Examples
-ReleaseBuilds/
+# ignore everything
+/*
 
+# ... but the following
+!.gitignore
+!.gitattributes
+!/[Aa]ssets/
+!/[Pp]rojectSettings/
+!/[Pp]ackages/
