--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 Assets filter=lfs diff=lfs merge=lfs -text
-Assets/3rd-Party/AgoraEngine/Plugins/iOS/AgoraRtcKit.framework/AgoraRtcKit filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/**/* filter=lfs diff=lfs merge=lfs -text
+Assets/Resources/Textures/HomePageLoadingAnimation filter=lfs diff=lfs merge=lfs -text
+Assets/HoloMeApp/Textures filter=lfs diff=lfs merge=lfs -text
+Assets/Firebase/Plugins/** filter=lfs diff=lfs merge=lfs -text
