-Added firebase messaging package

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.google.firebase.auth": "6.16.1",
     "com.google.firebase.crashlytics": "6.16.1",
     "com.google.firebase.dynamic-links": "6.16.1",
+    "com.google.firebase.messaging": "6.16.1",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ext.nunit": "1.0.6",
