--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,10 +12,12 @@
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.mobile.android-logcat": "1.2.1",
+    "com.unity.mobile.notifications": "1.3.2",
     "com.unity.purchasing": "2.2.2",
     "com.unity.subsystemregistration": "1.0.6",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "2.0.1",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.19-preview",
     "com.unity.xr.arcore": "3.0.1",
     "com.unity.xr.arfoundation": "3.0.1",
     "com.unity.xr.arkit": "3.0.1",
