--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 Assets filter=lfs diff=lfs merge=lfs -text
-Assets/AgoraEngine/**/* filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/Plugins/iOS/**/* filter=lfs diff=lfs merge=lfs -text
 Assets/Resources/Textures/HomePageLoadingAnimation filter=lfs diff=lfs merge=lfs -text
 Assets/HoloMeApp/Textures filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/** filter=lfs diff=lfs merge=lfs -text
