--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Assets/AgoraEngine/Plugins/iOS/AgoraRtcKit.framework/AgoraRtcKit filter=lfs diff=lfs merge=lfs -text
+Assets/AgoraEngine/Plugins/iOS/** filter=lfs diff=lfs merge=lfs -text
