--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "ru.mopsicus.mobileinput": "https://github.com/mopsicus/UnityMobileInput.git",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ext.nunit": "1.0.6",
