--- a/Assets/NatSuite/Plugins/macOS/NatCorder.bundle/Contents/Info.plist
+++ b/Assets/NatSuite/Plugins/macOS/NatCorder.bundle/Contents/Info.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19D76</string>
+	<string>18A391</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
 	<string>NatCorder</string>
 	<key>CFBundleIdentifier</key>
-	<string>api.natsuite.NatCorder</string>
+	<string>com.yusufolokoba.NatCorder</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,20 +27,18 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E503a</string>
+	<string>10B61</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19E258</string>
+	<string>18B71</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.14</string>
 	<key>DTXcode</key>
-	<string>1141</string>
+	<string>1010</string>
 	<key>DTXcodeBuild</key>
-	<string>11E503a</string>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.13</string>
+	<string>10B61</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2020 Yusuf Olokoba. All rights reserved.</string>
+	<string>Copyright © 2019 Yusuf Olokoba. All rights reserved.</string>
 </dict>
 </plist>
