--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -19,22 +19,13 @@
         <category android:name="android.intent.category.LAUNCHER" />
         <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
       </intent-filter>
-      <!-- Deep Links uncomment and replace YOUR_URL_SCHEME, if applicable, or remove if not supporting deep links-->
-      <!--
-            <intent-filter android:label="@string/app_name">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="YOUR_URL_SCHEME" />
-            </intent-filter>
-            -->
-      <!--Login deep linking code merge with above when CT deep linking is enabled-->
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
         <category android:name="android.intent.category.DEFAULT" />
         <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="http" android:host="*.beem.me" />
-        <data android:scheme="https" android:host="*.beem.me" />
+        <data android:scheme="https" android:host="join.beem.me" />
+        <data android:scheme="https" android:host="ar.beem.me" />
+        <data android:scheme="https" android:host="watch.beem.me" />
       </intent-filter>
       <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
