--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -25,6 +25,10 @@
         <category android:name="android.intent.category.BROWSABLE" />
         <data android:scheme="https" android:host="join.beem.me" />
         <data android:scheme="https" android:host="watch.beem.me" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/message/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/room/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/stadium/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/prerecorded/" />
       </intent-filter>
       <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
