--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/room/" />
         <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/stadium/" />
         <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/prerecorded/" />
+        <data android:scheme="beemholomedl" android:host="beem.me" android:pathPrefix="/gallery/" />
       </intent-filter>
       <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
     </activity>
