--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -5,6 +5,13 @@
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.CAMERA" />
+
   <uses-feature android:glEsVersion="0x00020000" />
   <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false" />
@@ -38,18 +45,29 @@
         <action android:name="com.google.firebase.MESSAGING_EVENT" />
       </intent-filter>
     </service>
-    <service android:name="com.google.firebase.messaging.MessageForwardingService"
-     android:permission="android.permission.BIND_JOB_SERVICE"
-     android:exported="false" >
-      <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT" />
-      </intent-filter>
-    </service>
     <service android:name="com.clevertap.android.sdk.pushnotification.CTNotificationIntentService" android:exported="false">
       <intent-filter>
         <action android:name="com.clevertap.PUSH_EVENT" />
       </intent-filter>
     </service>
+
+    <activity android:name="com.google.firebase.MessagingUnityPlayerActivity" android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="https" android:host="join.beem.me" />
+        <data android:scheme="https" android:host="watch.beem.me" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/message/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/room/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/stadium/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/prerecorded/" />
+        <data android:scheme="beemholomedl" android:host="beem.me" android:pathPrefix="/gallery/" />
+      </intent-filter>
+      <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
+    </activity>
+    <service android:name="com.google.firebase.messaging.MessageForwardingService" android:exported="false" />
+
     <meta-data android:name="FCM_SENDER_ID" android:value="id:233061171188" />
     <meta-data android:name="CLEVERTAP_ACCOUNT_ID" android:value="65RW6KKW6Z" />
     <meta-data android:name="CLEVERTAP_TOKEN" android:value="360256" />
