test listener on android

--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -80,21 +80,13 @@
     </activity>
 
     <activity
-      android:name="com.google.firebase_workaround.MessagingUnityPlayerActivityWorkaround"
+      android:name="com.google.firebase.MessagingUnityPlayerActivity"
       android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
 
       <meta-data
         android:name="unityplayer.UnityActivity"
         android:value="true" />
     </activity>
-
-    <service
-      android:name="com.clevertap.android.sdk.pushnotification.fcm.FcmMessageListenerService"
-      android:exported="true">
-      <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT" />
-      </intent-filter>
-    </service>
 
     <service
       android:name="com.clevertap.android.sdk.pushnotification.CTNotificationIntentService"
