--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,9 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.HoloMe.Beem"
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:installLocation="preferExternal"
-  android:versionCode="1"
-  android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.DefaultCompany.CustomFirebase" android:versionCode="1" android:versionName="1.0">
 
   <supports-screens
     android:anyDensity="true"
@@ -29,12 +25,10 @@
     android:name="android.hardware.touchscreen.multitouch.distinct"
     android:required="false" />
 
-  <application
-    android:debuggable="false"
-    android:icon="@drawable/app_icon"
-    android:isGame="true"
-    android:label="@string/app_name"
-    android:theme="@style/UnityThemeSelector">
+  <application android:label="@string/app_name" android:icon="@drawable/app_icon">
+    <!-- The MessagingUnityPlayerActivity is a class that extends
+         UnityPlayerActivity to work around a known issue when receiving
+         notification data payloads in the background. -->
 
     <activity
       android:name="com.unity3d.player.UnityPlayerNativeActivity"
@@ -51,12 +45,18 @@
       android:label="@string/app_name"
       android:launchMode="singleTask"
       android:screenOrientation="fullSensor">
+      <meta-data
+        android:name="unityplayer.UnityActivity"
+        android:value="true" />
+    </activity>
+
+    <activity
+      android:name="com.google.firebase.MessagingUnityPlayerActivity"
+      android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
 
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
-        <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
       </intent-filter>
 
       <intent-filter>
@@ -74,30 +74,10 @@
         <data android:scheme="beemholomedl" android:host="beem.me" android:pathPrefix="/gallery/" />
       </intent-filter>
 
-      <meta-data
-        android:name="unityplayer.UnityActivity"
-        android:value="true" />
-    </activity>
+      <meta-data android:name="unityplayer.UnityActivity"
+                 android:value="true" />
 
-    <activity
-      android:name="com.google.firebase_workaround.MessagingUnityPlayerActivityWorkaround"
-      android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen">
-      <intent-filter>
-        <action android:name="OPEN_ACTIVITY_1" />
-        <category android:name="android.intent.category.DEFAULT" />
-      </intent-filter>
-      <meta-data
-        android:name="unityplayer.UnityActivity"
-        android:value="true" />
     </activity>
-
-    <service
-      android:name="com.clevertap.android.sdk.pushnotification.CTNotificationIntentService"
-      android:exported="false">
-      <intent-filter>
-        <action android:name="com.clevertap.PUSH_EVENT" />
-      </intent-filter>
-    </service>
 
     <service
       android:name="com.google.firebase.messaging.MessageForwardingService"
@@ -106,9 +86,10 @@
     </service>
 
     <service
-      android:name="com.google.firebase.messaging.FirebaseMessagingService">
+      android:name="com.clevertap.android.sdk.pushnotification.CTNotificationIntentService"
+      android:exported="false">
       <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        <action android:name="com.clevertap.PUSH_EVENT" />
       </intent-filter>
     </service>
 
