--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.kyub.emojisearch": "https://gitlab-ci-token:zF563oCqvXdJmiDuMShq@gitlab.com/KyubInteractive/kyublibs.git#com.kyub.emojisearch-1.1.2",
     "com.unity.2d.sprite": "1.0.0",
+    "api.natsuite.natml": "1.0.9",
     "com.unity.addressables": "1.16.19",
     "com.unity.collab-proxy": "1.5.7",
     "com.unity.ext.nunit": "1.0.6",
@@ -59,6 +60,11 @@
       "scopes": [
         "com.google"
       ]
+    },
+    {
+      "name": "NatML",
+      "url": "https://registry.npmjs.com",
+      "scopes": [ "api.natsuite" ]
     }
   ]
 }
