--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -66,13 +66,10 @@
         <category android:name="android.intent.category.BROWSABLE" />
 
         <data android:scheme="https" android:host="join.beem.me" />
-        <data android:scheme="https" android:host="watch.beem.me" />
-        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/message/" />
-        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/room/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/watch/" />
+        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/connect/" />
         <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/stadium/" />
-        <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/live/" />
         <data android:scheme="https" android:host="ar.beem.me" android:pathPrefix="/prerecorded/" />
-        <data android:scheme="beemholomedl" android:host="beem.me" android:pathPrefix="/gallery/" />
       </intent-filter>
 
       <meta-data android:name="unityplayer.UnityActivity"
