--- a/Assets/Plugins/Android/com.voxelbusters.essentialkit.androidlib/AndroidManifest.xml
+++ b/Assets/Plugins/Android/com.voxelbusters.essentialkit.androidlib/AndroidManifest.xml
@@ -1,47 +1,15 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.voxelbusters.android.essentialkitplugin" android:versionCode="1" android:versionName="1.0">
   <application>
-    <activity android:name="com.voxelbusters.android.essentialkit.features.webview.WebViewActivity" android:theme="@style/Theme.Transparent" android:hardwareAccelerated="true" />
-    <activity android:name="com.voxelbusters.android.essentialkit.features.deeplinkservices.DeepLinkRedirectActivity" android:label="Native Plugins 2.0" android:exported="true">
-      <intent-filter android:label="custom-scheme">
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="voxelbusters" android:host="game" />
-      </intent-filter>
-    </activity>
-    <activity android:name="com.voxelbusters.android.essentialkit.features.notificationservices.NotificationLauncher" android:theme="@style/Theme.Transparent" android:exported="true" />
-    <provider android:name="com.voxelbusters.android.essentialkit.common.FileProviderExtended" android:authorities="com.voxelbusters.essentialkit.essentialkit.fileprovider" android:exported="false" android:grantUriPermissions="true">
+    <provider android:name="com.voxelbusters.android.essentialkit.common.FileProviderExtended" android:authorities="com.HoloMe.Beem.essentialkit.fileprovider" android:exported="false" android:grantUriPermissions="true">
       <meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/essential_kit_file_paths" />
     </provider>
-    <service android:name="com.voxelbusters.android.essentialkit.features.notificationservices.provider.fcm.FCMMessagingService" android:exported="false">
-      <intent-filter>
-        <action android:name="com.google.firebase.MESSAGING_EVENT" />
-      </intent-filter>
-    </service>
-    <receiver android:name="com.voxelbusters.android.essentialkit.features.notificationservices.AlarmBroadcastReceiver" />
-    <receiver android:name="com.voxelbusters.android.essentialkit.features.notificationservices.BootCompleteBroadcastReceiver" android:exported="true">
-      <intent-filter>
-        <category android:name="android.intent.category.DEFAULT" />
-        <action android:name="android.intent.action.BOOT_COMPLETED" />
-        <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-        <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
-      </intent-filter>
-    </receiver>
-    <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="\u003113386462231" />
   </application>
-  <uses-permission android:name="android.permission.READ_CONTACTS" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-  <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" tools:remove="android:maxSdkVersion" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" tools:remove="android:maxSdkVersion" />
   <uses-permission android:name="com.google.android.apps.photos.permission.GOOGLE_PHOTOS" />
   <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
   <uses-permission android:name="android.permission.CAMERA" />
-  <uses-permission android:name="android.permission.RECORD_AUDIO" />
-  <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
   <uses-feature android:name="android.hardware.camera" />
   <uses-feature android:name="android.hardware.camera.autofocus" />
 </manifest>
