--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,7 +12,9 @@
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-
+	<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" tools:node="remove"/>
+	<uses-permission android:name="android.permission.BLUETOOTH" tools:node="remove"/>
+	
 	<uses-feature android:glEsVersion="0x00020000" />
 
 	<uses-feature
